<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2loginActivity">


    <EditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/Entertheemail"
        android:inputType="textEmailAddress"
        android:textSize="25sp" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_text"
        android:drawableStart="@drawable/ic_work_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/forgetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="end|center_vertical"
        android:text="@string/forget_password"
        android:textSize="20sp"
        android:layout_below="@+id/passwordEditText"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"


        />


</RelativeLayout>