<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".databaseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_pAss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_name"

                android:hint="@string/enterthepassword"
                android:inputType="textPassword"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/ll_view_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_pAss"
                android:orientation="horizontal"
                android:weightSum="2.5">

                <Button
                    android:id="@+id/btn_view_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/viewdata"
                    android:textSize="25sp" />
                <View
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <Button
                    android:id="@+id/btn_add_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/add_user"
                    android:textSize="25sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_view_add"

                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"

                    android:hint="@string/current_name"
                    android:inputType=""
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/et_newName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"

                    android:hint="@string/new_name"
                    android:inputType=""
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"

                    android:text="@string/update"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_update"
                android:orientation="horizontal"
               >

                <EditText
                    android:id="@+id/et_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/enter_name_to_delete"
                    android:inputType=""
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textSize="25sp"

                    />


            </LinearLayout>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>