<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/welcome_to_nast"
        android:textSize="35sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome_msg"
        android:layout_centerHorizontal="true"

        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textSize="25sp" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textSize="25sp"
        android:layout_margin="20dp"/>

</RelativeLayout>